Edit investment rounds and activities done, investor list and show investment rounds and activities done

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$yDExalZfn8.D2F/WSRoxletms8Od4aRj4FYQf24bxgvVU3naGEPGe"
+# 	- password: java.lang.String = "$2a$05$rq.MeK2PSV/hQE6fjJhk9eGR3p61p9ypCur74I6pbNwqORStRrbu2"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$yCDtqLkobqMxCT20DBjJSukoUBLrPak2Q173h2mX1/Zf6vGnTkXaO"
+# 	- password: java.lang.String = "$2a$05$wjwV7ZZOR76x2zhwv0qYguhwABgzHFF8TuJnC5mqXjKE2Zz6JqW3a"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -424,7 +424,7 @@ entrepreneur1UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepreneur1"
-# 	- password: java.lang.String = "$2a$05$8tvIN0X4LeOn7/L.7g4nBe/vIofsmUyVBk8UksL6GhLeo1Kv.NS9K"
+# 	- password: java.lang.String = "$2a$05$XCmTOyAwgZZoPU9iRWQGTOBE.5u1zx19Yb2hyoT69YEvl6yjzf1j6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Juan, surname=Rodriguez, email=Juan@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepreneur{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -473,7 +473,7 @@ entrepreneur2UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepreneur2"
-# 	- password: java.lang.String = "$2a$05$FS2MrKdtoskI8E5XrsyWROZ2ApM9ocEgQR7BFIct.AVBULxKlLnKC"
+# 	- password: java.lang.String = "$2a$05$BXWUcLH.V1IeMta1ysFJ5e.XdVhZ.bGaFd9pyk2jUQ2tzjfF.Ewai"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Carlos, surname=Dominguez, email=Carlos@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepreneur{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -610,7 +610,7 @@ investor1UserAccount=35
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$NxOBRAW2bqLxt61xzG9c7O7Tvmc8L70QRXXwbXhxP.YgTl4CQO68m"
+# 	- password: java.lang.String = "$2a$05$2eGyEASiVApIhRyXVRobWus.Y2NEVasYU6Vf4SV.xuz54j7ucFEoa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Miguel, surname=Hernandez, email=Miguel@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=36, version=0}, acme.framework.entities.Authenticated{id=37, version=0}]
@@ -658,7 +658,7 @@ investor2UserAccount=38
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$oBdRjOWJexUUpS5ivJB9x.OL24s/fo2xMHajIT/IFJsqR8ZG3ufR2"
+# 	- password: java.lang.String = "$2a$05$nz/Eh0rXqb0oUddvdMg5puKU9jsSxXxMJCxJkb5GErxqmb575wVY2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Diego, surname=Garcia, email=Diego@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=39, version=0}, acme.framework.entities.Authenticated{id=40, version=0}]
@@ -762,4 +762,17 @@ application04=44
 # 	- offer: acme.framework.datatypes.Money = <<EUR 800.00>>
 # 	- investmentRound: acme.entities.investmentRounds.InvestmentRound = acme.entities.investmentRounds.InvestmentRound{id=31, version=0}
 # 	- investor: acme.entities.roles.Investor = acme.entities.roles.Investor{id=39, version=0}
+
+customisationParameters01=45
+
+# acme.entities.customisationParameters.CustomisationParameters{id=45, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 45
+# 	- version: int = 0
+# 	from acme.entities.customisationParameters.CustomisationParameters:
+# 	- serialVersionUID: long = 1
+# 	- spamWords: java.lang.String = "sex, hardcore, viagra, cialis, nigeria, you've won, million dollar, sexo, has ganado, millón de euros"
+# 	- spamThreshold: java.lang.Double = 2.5
 
