--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$rq.MeK2PSV/hQE6fjJhk9eGR3p61p9ypCur74I6pbNwqORStRrbu2"
+# 	- password: java.lang.String = "$2a$05$DMjXNYW0rkSOtE3taVgkRueYboBfA.nLBz3BR93HCUKQwXwRW/.Ye"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$wjwV7ZZOR76x2zhwv0qYguhwABgzHFF8TuJnC5mqXjKE2Zz6JqW3a"
+# 	- password: java.lang.String = "$2a$05$./ksd.035XzfBHvI9RGDIuFDI7EvQybBmzx67di3aIw4d.UMJ1pBW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -424,7 +424,7 @@ entrepreneur1UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepreneur1"
-# 	- password: java.lang.String = "$2a$05$XCmTOyAwgZZoPU9iRWQGTOBE.5u1zx19Yb2hyoT69YEvl6yjzf1j6"
+# 	- password: java.lang.String = "$2a$05$99Uk8L5zfhMQKy9jO3qg6eb2NtznuAW0Vk0B6OTCGMrJloa1na7te"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Juan, surname=Rodriguez, email=Juan@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepreneur{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -473,7 +473,7 @@ entrepreneur2UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepreneur2"
-# 	- password: java.lang.String = "$2a$05$BXWUcLH.V1IeMta1ysFJ5e.XdVhZ.bGaFd9pyk2jUQ2tzjfF.Ewai"
+# 	- password: java.lang.String = "$2a$05$jcb4Grt1PGsv8M2dlUjyA.DkJhPgyQesNz3CsM5wIzDRiPqlE68oy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Carlos, surname=Dominguez, email=Carlos@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepreneur{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -610,7 +610,7 @@ investor1UserAccount=35
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$2eGyEASiVApIhRyXVRobWus.Y2NEVasYU6Vf4SV.xuz54j7ucFEoa"
+# 	- password: java.lang.String = "$2a$05$gU90dDxhZWshERV82ldhTev4hhOBT/SzzlFL83newrqCDtOFtUeJm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Miguel, surname=Hernandez, email=Miguel@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=36, version=0}, acme.framework.entities.Authenticated{id=37, version=0}]
@@ -658,7 +658,7 @@ investor2UserAccount=38
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$nz/Eh0rXqb0oUddvdMg5puKU9jsSxXxMJCxJkb5GErxqmb575wVY2"
+# 	- password: java.lang.String = "$2a$05$0NaLL2yVhB1h5KdC11jThOdZZXEDRwqepO5sBmlTYq4j2sqnKN.0W"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Diego, surname=Garcia, email=Diego@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=39, version=0}, acme.framework.entities.Authenticated{id=40, version=0}]
@@ -711,6 +711,8 @@ application01=41
 # 	- offer: acme.framework.datatypes.Money = <<EUR 100.00>>
 # 	- investmentRound: acme.entities.investmentRounds.InvestmentRound = acme.entities.investmentRounds.InvestmentRound{id=30, version=0}
 # 	- investor: acme.entities.roles.Investor = acme.entities.roles.Investor{id=36, version=0}
+# 	- status: java.lang.String = "PENDING"
+# 	- justification: java.lang.String = null
 
 application02=42
 
@@ -728,6 +730,8 @@ application02=42
 # 	- offer: acme.framework.datatypes.Money = <<EUR 50.00>>
 # 	- investmentRound: acme.entities.investmentRounds.InvestmentRound = acme.entities.investmentRounds.InvestmentRound{id=30, version=0}
 # 	- investor: acme.entities.roles.Investor = acme.entities.roles.Investor{id=39, version=0}
+# 	- status: java.lang.String = "PENDING"
+# 	- justification: java.lang.String = null
 
 application03=43
 
@@ -745,6 +749,8 @@ application03=43
 # 	- offer: acme.framework.datatypes.Money = <<EUR 300.00>>
 # 	- investmentRound: acme.entities.investmentRounds.InvestmentRound = acme.entities.investmentRounds.InvestmentRound{id=31, version=0}
 # 	- investor: acme.entities.roles.Investor = acme.entities.roles.Investor{id=36, version=0}
+# 	- status: java.lang.String = "PENDING"
+# 	- justification: java.lang.String = null
 
 application04=44
 
@@ -762,6 +768,8 @@ application04=44
 # 	- offer: acme.framework.datatypes.Money = <<EUR 800.00>>
 # 	- investmentRound: acme.entities.investmentRounds.InvestmentRound = acme.entities.investmentRounds.InvestmentRound{id=31, version=0}
 # 	- investor: acme.entities.roles.Investor = acme.entities.roles.Investor{id=39, version=0}
+# 	- status: java.lang.String = "PENDING"
+# 	- justification: java.lang.String = null
 
 customisationParameters01=45
 
