--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$DMjXNYW0rkSOtE3taVgkRueYboBfA.nLBz3BR93HCUKQwXwRW/.Ye"
+# 	- password: java.lang.String = "$2a$05$mpFaVHVPxRo9r2Ud8ejmDOVyR9pdvUFqHI7W1QTI5vproSnAkJuFG"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$./ksd.035XzfBHvI9RGDIuFDI7EvQybBmzx67di3aIw4d.UMJ1pBW"
+# 	- password: java.lang.String = "$2a$05$jni71iUh5TEFDqBNLRPbce9t.JzkvX4MteoDt7pYVL4EPUVPWKkPW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -424,7 +424,7 @@ entrepreneur1UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepreneur1"
-# 	- password: java.lang.String = "$2a$05$99Uk8L5zfhMQKy9jO3qg6eb2NtznuAW0Vk0B6OTCGMrJloa1na7te"
+# 	- password: java.lang.String = "$2a$05$VQLILuCkrsK72uADelyZlO/4gxPZi4x2zGsLF0wUda5VFtNtGkfzC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Juan, surname=Rodriguez, email=Juan@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepreneur{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -473,7 +473,7 @@ entrepreneur2UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepreneur2"
-# 	- password: java.lang.String = "$2a$05$jcb4Grt1PGsv8M2dlUjyA.DkJhPgyQesNz3CsM5wIzDRiPqlE68oy"
+# 	- password: java.lang.String = "$2a$05$NeonurN1aqRHvlUESruLc.WnYZWwIoPOTlMcVjo9OD.xIg6PHYG3W"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Carlos, surname=Dominguez, email=Carlos@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepreneur{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -610,7 +610,7 @@ investor1UserAccount=35
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$gU90dDxhZWshERV82ldhTev4hhOBT/SzzlFL83newrqCDtOFtUeJm"
+# 	- password: java.lang.String = "$2a$05$o89hYF.6kR5xlMZpgXu2ZuONoJrPH1wQsrk5ELevRD6nI3XPF3bHe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Miguel, surname=Hernandez, email=Miguel@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=36, version=0}, acme.framework.entities.Authenticated{id=37, version=0}]
@@ -658,7 +658,7 @@ investor2UserAccount=38
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$0NaLL2yVhB1h5KdC11jThOdZZXEDRwqepO5sBmlTYq4j2sqnKN.0W"
+# 	- password: java.lang.String = "$2a$05$Owxd8xWt0CeAV2mUcSjF/.q7vLArdBanXUZLwxDwHYvWf/TQNV3um"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Diego, surname=Garcia, email=Diego@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=39, version=0}, acme.framework.entities.Authenticated{id=40, version=0}]
